--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,5 +1,11 @@
 :root {
   --md-tooltip-width: 300px;
+  --md-text-font: "Open Sans", sans-serif;
+  --md-code-font: "Source Code Pro", monospace;
+}
+
+:root code {
+  font-size: 0.9em;
 }
 
 img[alt="diagram"] {
@@ -18,4 +24,12 @@ img[alt="diagram"] {
 
 .md-logo img {
   height: 3rem !important;
+}
+
+.md-typeset summary {
+  font-size: 0.9em;
+}
+
+.md-typeset details {
+  font-size: 1em;
 }
