--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -24,10 +24,17 @@ img[alt="diagram"] {
   padding: 0;
 }
 
-.md-logo img {
-  height: 3.5rem !important;
+.md-header__button.md-logo img {
+  height: 2.5rem;
   margin-right: -0.75rem;
-  margin-bottom: -0.25rem;
+}
+
+.md-tabs a {
+  margin-top: 0.4rem;
+}
+
+.md-tabs li {
+  height: 1.8rem;
 }
 
 .md-typeset summary {
