tweaked graphql example for portability

--- a/examples/go/graphql/components/server/templates/index.html
+++ b/examples/go/graphql/components/server/templates/index.html
@@ -24,7 +24,7 @@
       <tr>
         <td>{{.Name}}</td>
         <td>{{.RealName}}</td>
-        <td>{{.Alignment.Alignment}}</td>
+        <td>{{.Alignment.Value}}</td>
       </tr>
       {{ end}}
     </table>
